--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,3 +66,24 @@ body.loggedin {
     padding: 5px;
     margin: 0 0 10px 0;
 }
+
+.center_div{
+    margin: 0 auto;
+    width:80% /* value of your choice which suits your alignment */
+}
+
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+#content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;            /* Footer height */
+}
