COMP2003 Hostel Website - Changelog - Major UI Clean up | Password Hashing | Booking Calendar - Almost Complete |  + More
Additions
- Added bookingFeedback.php (Sends user to a Feedback page which informs them that their booking has been made!)
- Added Password Hashing to Volunteer and Admin Sign Up
- Added Password Hash Verifier to Volunteer/Admin Logins
- Added Booking Calendar to Create Bookings Page (Volunteers can now see the days that are available! - Currently unfinished - 80% Done)
- Added adminProfile.php (Profile page for Admins)
- Added aboutTrain.png
- Added adminUsersManager.png
- Added bookingManager.png
- Added createBooking.png
- Added dataManager.png
- Added updateBookings.png

Improvements
- UI Overhaul
- Removed redundant code from multiple files
- Updated all pages (Improved UI and Navigation)
- Improved the footer for all webpages
- Improved the navbar to update properly when User logs in and out
- Improved Create Booking to provide feedback
- Fixed all links
- General fixes

To Do
- Finish Booking Calendar
- Provide an adult form if Volunteer is under 16
- Provide correct amount of forms if Volunteer selects more than 1 person (Max 4)
- Further UI Improvements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,30 @@
+.nav {
+    -webkit-box-shadow: 0 8px 6px -6px #999;
+    -moz-box-shadow: 0 8px 6px -6px #999;
+    box-shadow: 0 8px 6px -6px #999;
+}
+
+/* the rest of your styling */
+
 .navtop {
     background-color: #2f3947;
     height: 60px;
     width: 100%;
     border: 0;
 }
+
 .navtop div {
     display: flex;
     margin: 0 auto;
     width: 1000px;
     height: 100%;
 }
+
 .navtop div h1, .navtop div a {
     display: inline-flex;
     align-items: center;
 }
+
 .navtop div h1 {
     flex: 1;
     font-size: 24px;
@@ -22,18 +33,23 @@
     color: #eaebed;
     font-weight: normal;
 }
+
 .navtop div a {
     padding: 0 20px;
     text-decoration: none;
     color: #c1c4c8;
     font-weight: bold;
 }
+
 .navtop div a i {
     padding: 2px 8px 0 0;
 }
+
 .navtop div a:hover {
     color: #eaebed;
 }
+
+
 body.loggedin {
     background-color: #f3f4f7;
 }
